# mnemosyne

./: .clang-format  .gitignore  README.md  digest.hpp  main.cpp  meson.build  val.hpp  value.cpp  value.hpp
test/: test_value.cpp
